kubernetes/apps/default/tdarr/app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tdarr
  namespace: default
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: tdarr
      app.kubernetes.io/instance: tdarr
      app.kubernetes.io/controller: tdarr
  template:
    metadata:
      labels:
        app.kubernetes.io/name: tdarr
        app.kubernetes.io/instance: tdarr
        app.kubernetes.io/controller: tdarr
    spec:
      securityContext:
        runAsNonRoot: false
        runAsUser: 0
        runAsGroup: 0
        fsGroup: 568
        fsGroupChangePolicy: OnRootMismatch
      containers:
        - name: app
          image: ghcr.io/haveagitgat/tdarr:2.70.01@sha256:4d48a46fb984b29e07cf4fd66cf7d3c8bd7c2c8dd662d09b4e20e11ae93e52fc
          ports:
            - name: http
              containerPort: 8265
            - name: server
              containerPort: 8266
          startupProbe:
            httpGet:
              path: /
              port: 8265
            failureThreshold: 60
            periodSeconds: 10
          livenessProbe: &probe
            httpGet:
              path: /
              port: 8265
            initialDelaySeconds: 30
            periodSeconds: 20
            timeoutSeconds: 10
            failureThreshold: 5
          readinessProbe: *probe
          resources:
            requests:
              cpu: 250m
              memory: 2Gi
            limits:
              cpu: 1000m
              memory: 4Gi
              gpu.intel.com/i915: "1"
          securityContext:
            privileged: true
          volumeMounts:
            - name: config
              mountPath: /app/server
            - name: media
              mountPath: /media
            - name: temp
              mountPath: /temp
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: tdarr
        - name: media
          persistentVolumeClaim:
            claimName: synology-media
        - name: temp
          emptyDir: {}
