kubernetes/apps/default/tdarr/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tdarr
  namespace: default
  labels:
    app.kubernetes.io/name: tdarr
    app.kubernetes.io/instance: tdarr
    app.kubernetes.io/controller: tdarr
spec:
  ports:
    - name: http
      port: 8265
      targetPort: http
      protocol: TCP
    - name: server
      port: 8266
      targetPort: server
      protocol: TCP
  selector:
    app.kubernetes.io/name: tdarr
    app.kubernetes.io/instance: tdarr
    app.kubernetes.io/controller: tdarr
