kubernetes/apps/default/tdarr/app/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: tdarr
  namespace: default
  annotations:
    gatus.home-operations.com/endpoint: 'dns: { query-name: tdarr.unscfleet.com }'
spec:
  parentRefs:
    - name: envoy-internal
      namespace: network
      sectionName: https
  hostnames:
    - tdarr.unscfleet.com
  rules:
    - backendRefs:
        - name: tdarr
          port: 8265
